plugins/kotlin/idea/tests/testData/multiplatform/duplicateActualsImplicit/bottom/bottom.kt
package foo

class ActualInMiddleCompatibleInBottom
actual class <!LINE_MARKER("descr='Has expects in top module'")!>CompatibleInMiddleActualInBottom<!>

class CompatibleInMiddleAndBottom
